# parallelizer

./: AGENTS.md  README.md  main.py  mcp_server.py  pyproject.toml
.agents/: AGENTS.md  APP_TODO_LIST.md  TECHNICAL_SPEC.md
parallelizer/: __init__.py  agent_event.py  cli.py  config.py  errors.py  git_utils.py  mcp_server.py  models.py  prompts.py  runner.py  service.py  state.py
scripts/: install_plr.py
tests/: test_parallelizer.py
