[project]
name = "parallelizer"
version = "0.1.0"
description = "Spawn coding subagents in isolated git worktrees."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "typer>=0.12.0",
]

[project.scripts]
plr = "parallelizer.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
